RESOLVED FIXED29303
[V8] Fix style violation in V8AbstractEventListener.
https://bugs.webkit.org/show_bug.cgi?id=29303
Summary [V8] Fix style violation in V8AbstractEventListener.
Vitaly Repeshko
Reported 2009-09-16 10:08:44 PDT
[V8] Fix style violation in V8AbstractEventListener.
Attachments
patch (1.97 KB, patch)
2009-09-16 10:14 PDT, Vitaly Repeshko
dglazkov: review-
patch (1.25 KB, patch)
2009-09-16 10:33 PDT, Vitaly Repeshko
no flags
Vitaly Repeshko
Comment 1 2009-09-16 10:14:25 PDT
Dimitri Glazkov (Google)
Comment 2 2009-09-16 10:26:04 PDT
Comment on attachment 39650 [details] patch index 908043b..4736d40 100644 > --- a/WebKitTools/ChangeLog > +++ b/WebKitTools/ChangeLog > @@ -1,3 +1,17 @@ > +2009-09-16 kevino@webkit.org <kevino@webkit.org@268f45cc-cd09-0410-ab3c-d52691b4dbfc> > + > + Reviewed by NOBODY (OOPS!). > + > + wx build fix, improve debug support and 2.9 support on MSW. > + > + > + git-svn-id: http://svn.webkit.org/repository/webkit/trunk@48422 268f45cc-cd09-0410-ab3c-d52691b4dbfc > + > + Need a short description and bug URL (OOPS!) > + > + * wx/build/settings.py: > + * wx/build/wxpresets.py: > + > 2009-09-16 Kevin Ollivier <kevino@theolliviers.com> > > wx build fix, improve debug support and 2.9 support on MSW. Whoa. what's this?
Vitaly Repeshko
Comment 3 2009-09-16 10:33:32 PDT
Created attachment 39651 [details] patch Removed garbage from ChangeLog.
Dimitri Glazkov (Google)
Comment 4 2009-09-16 10:37:05 PDT
Comment on attachment 39651 [details] patch r=me.
WebKit Commit Bot
Comment 5 2009-09-16 13:23:38 PDT
Comment on attachment 39651 [details] patch Clearing flags on attachment: 39651 Committed r48432: <http://trac.webkit.org/changeset/48432>
WebKit Commit Bot
Comment 6 2009-09-16 13:23:42 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.