2009-09-16  Vitaly Repeshko  <vitalyr@chromium.org>

Reviewed by Dimitri Glazkov.

        [V8] Fix style violation in V8AbstractEventListener.
        https://bugs.webkit.org/show_bug.cgi?id=29303

        * bindings/v8/V8AbstractEventListener.h:
        (WebCore::V8AbstractEventListener::operator==):

Canonical link: https://commits.webkit.org/39997@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48432 268f45cc-cd09-0410-ab3c-d52691b4dbfc