WebCore/bindings/v8/V8AbstractEventListener.h
@@ -53,9 +53,7 @@ namespace WebCore {
     public:
         virtual ~V8AbstractEventListener() { }
 
-        virtual bool operator==(const EventListener& other) {
-            return this == &other;
-        }
+        virtual bool operator==(const EventListener& other) { return this == &other; }
 
         // Returns the owner frame of the listener.
         Frame* frame() { return m_frame; }
